istio-usecases/suspend-traffic.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: dynamodb-vs
  namespace: eks-poc-istio
spec:
  hosts:
    - dynamodb-service.eks-poc-istio.svc.cluster.local
  http:
    - fault:
        abort:
          httpStatus: 503
          percentage:
            value: 100
      route:
        - destination:
            host: dynamodb-service.eks-poc-istio.svc.cluster.local
